umol-models-graph/tests/smiles_parsing/snapshots/smiles_parsing__smiles_parsing_suite__run_conformance_test@cdk_0213_O1CCCC2CC3C(OCC4C3OC_.smiles.snap
---
source: umol-models-graph/tests/smiles_parsing/mod.rs
expression: results
---
expected_category: invalid
category: invalid
basic_opensmiles:
  success: false
  error:
    error_type: InvalidWhitespace
    message: Invalid whitespace at position 33
opensmiles:
  success: false
  error:
    error_type: InvalidWhitespace
    message: Invalid whitespace at position 33
